<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stock Trading System</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_stock_meun">Stock Meun</string>
    <string name="title_activity_portfolio">Portfolio</string>
    <string name="title_activity_real_time_stock">Real Time Stock</string>
    <string name="title_activity_stock_trading">Stock Trading</string>
    <string name="title_activity_stock_trading_buy">Buy Stock</string>
    <string name="title_activity_stock_trading_sell">Sell Stock</string>
    <string name="title_activity_stock_recording">Trading Records</string>
    <string name="title_activity_pie_chart">PieChart</string>
    <string name="stock_code">Stock Code</string>
    <string name="stock_code_hint">e.g.: 0001</string>
    <string name="stock_name">Stock Name:</string>
    <string name="last_position">Last Position:</string>
    <string name="high_low">High / Low:</string>
    <string name="board_lot_size">Board Lot Size:</string>
    <string name="none">(none)</string>
    <string name="buying_lot">Buying Lot:</string>
    <string name="lot_hint">e.g.: 10</string>
    <string name="required_fee_to_buy">Required fee to buy:</string>
    <string name="back">Back</string>
    <string name="buy">Buy</string>
    <string name="stock_trading">Stock Trading</string>
    <string name="stock_trading_description">Please select the operatin you would like the system to perform.</string>
    <string name="sell">Sell</string>
    <string name="count">Count:</string>
    <string name="cancel">Cancel</string>
    <string name="stock_stock_code_auto_hint">(Auto Complete) e.g.: 0001</string>
    <string name="selling_lot">Selling Lot:</string>
    <string name="money_after_sold">Money after sold:</string>
    <string name="selling_price">Selling Price</string>
    <string name="price_hint">e.g.: 28.05</string>
    <string name="buying_price">Buying price:</string>

</resources>
