<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnBuyCheckout"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/txtBuyStockStockCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/stock_code"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edtBuyStockStockCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtBuyStockStockCode"
                android:ems="10"
                android:hint="@string/stock_code_hint"
                android:inputType="number" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/txtBuyStockStockName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/edtBuyStockStockCode"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/stock_name" />

            <TextView
                android:id="@+id/txtBuyStockSelectedStockName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txtBuyStockStockName"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:text="@string/none" />

            <TextView
                android:id="@+id/txtBuyStockLastPos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtBuyStockStockName"
                android:layout_marginTop="@dimen/sub_vertical_margin"
                android:text="@string/last_position" />

            <TextView
                android:id="@+id/txtBuyStockSelectedStockLastPos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txtBuyStockLastPos"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:text="@string/none" />

            <TextView
                android:id="@+id/txtBuyStockHighLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtBuyStockLastPos"
                android:layout_marginTop="@dimen/sub_vertical_margin"
                android:text="@string/high_low" />

            <TextView
                android:id="@+id/txtBuyStockSelectedStockHighLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txtBuyStockHighLow"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:text="@string/none" />

            <TextView
                android:id="@+id/txtBuyStockBoardLotSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtBuyStockHighLow"
                android:layout_marginTop="@dimen/sub_vertical_margin"
                android:text="@string/board_lot_size" />

            <TextView
                android:id="@+id/txtBuyStockSelectedStockBoardLotSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txtBuyStockBoardLotSize"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:text="@string/none" />

            <TextView
                android:id="@+id/txtBuyingPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtBuyStockBoardLotSize"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/buying_price"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edtBuyingPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/txtBuyingPrice"
                android:ems="10"
                android:hint="@string/price_hint"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/txtBuyingLot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/edtBuyingPrice"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/buying_lot"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edtBuyingLot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtBuyingLot"
                android:ems="10"
                android:hint="@string/lot_hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/txtRequiredFeeToBuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/edtBuyingLot"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/required_fee_to_buy" />

            <TextView
                android:id="@+id/txtRequiredFeeToBuyValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txtRequiredFeeToBuy"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:text="@string/none" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnBuyCheckout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/buy" />

    <Button
        android:id="@+id/btnBuyBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/cancel" />

</RelativeLayout>